# ai-manga-comic

./: .gitignore  PRODUCTION_REPORT.md  README.md  pyproject.toml  requirements.txt  story.json
configs/: default.yaml
examples/: generate_story.py
outputs/: assemble_video.py  story.json
outputs/audio/: audio_mapping.json
outputs/panels/: create_panels.py  create_placeholders.py  generate_free.py  generate_panels.py  panel_mapping.json
src/ai_manga/audio/: tts.py
src/ai_manga/cli/: main.py
src/ai_manga/image_gen/: generator.py
src/ai_manga/layout/: manga_layout.py
src/ai_manga/story/: generator.py
src/ai_manga/video/: assembler.py
workflows/: manga_txt2img.json
