[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-manga-comic"
version = "0.1.0"
description = "AI-powered manga comic creation pipeline"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ai-manga = "ai_manga.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
